Revert "- I fix section page overflow and css error, (#957)"
This reverts commit f21123797dca409ae86732008386a9fe676eba2f.

--- a/zc_frontend/src/pages/resources/styles/section4.css
+++ b/zc_frontend/src/pages/resources/styles/section4.css
@@ -6,7 +6,7 @@
   padding-left: 65px;
   padding-right: 65px;
   padding-bottom: 30px;
-  /*background-color: white; */
+  background-color: white;
 }
 
 .section_heading {
@@ -25,18 +25,11 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   border: none;
-  background-color: transparent;
 }
 
 @media only screen and (max-width: 600px) {
   .card {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-  }
-  .card_section {
-    padding: 2.5em;
-  }
-  .section_heading {
-    font-size: 16px;
   }
 }
